Bump to Servlet 6.1 (Tomcat 11)